--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -23,6 +23,8 @@
       "php",
       "twig"
     ],
+    "projectImage": "fb_one.jpg",
+    "projectAlt": "Screenshot of First Bank rewards calculator",
     "name": "First Bank",
     "year": 2018,
     "image": "fb.jpg",
@@ -37,6 +39,8 @@
       "scss",
       "Google analytics"
     ],
+    "projectImage": "hc_one.jpg",
+    "projectAlt": "Screenshot of Hillcenter video tour page",
     "name": "Hill Center",
     "year": 2018,
     "image": "hc.jpg",
@@ -52,6 +56,8 @@
       "scss",
       "google analytics"
     ],
+    "projectImage": "rourk_one.jpg",
+    "projectAlt": "Screenshot of Rourk homepage",
     "name": "Rourk",
     "year": 2018,
     "image": "rourk.png",
@@ -65,6 +71,8 @@
       "jQuery",
       "twig"
     ],
+    "projectImage": "fbomb_one.jpg",
+    "projectAlt": "Screenshot of fbomb category section",
     "name": "fbomb",
     "year": 2018,
     "image": "fbomb.jpg",
@@ -78,6 +86,8 @@
       "Magento 2",
       "jQuery"
     ],
+    "projectImage": "econo_one.jpg",
+    "projectAlt": "Screenshot of econolight poles page",
     "name": "e-conolight",
     "year": 2017,
     "image": "econo.jpg",
