Remove broken links

--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -18,7 +18,7 @@
       "intro": "",
       "description": "",
       "wrapup": "",
-      "url": "https://eosbet.io"
+      "url": ""
     },
     {
       "id": "scream",
@@ -35,7 +35,7 @@
       "intro": "",
       "description": "",
       "wrapup": "",
-      "url": "https://www.screamattrump.com/"
+      "url": ""
     },
     {
     "id": "cisco",
