Add information about advent calendar

--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -14,11 +14,11 @@
       "projectImage": "10days.jpg",
       "projectAlt": "10 Days of Frontend page",
       "year": 2021,
-      "image": "turing.png",
+      "image": "turingSchool.png",
       "alt": "Click to see 10 Days of Frontend work",
-      "intro": "",
-      "description": "",
-      "wrapup": "",
+      "intro": "Every year during the winter holidays at the Turing School of Software and Design, students get two weeks off from classes. To encourage them to relax and recharge, they don't typically have an assigned project at that time. For many students, going from a full time work schedule to complete time off can be detrimental to maintaining their engineering skills. After seeing this need, I created a bank of optional exercises to keep students on track.",
+      "description": "The skills focused on range from beginner to immediate JavaScript, testing, refactoring, network requests, DOM manipulation and more. Later, a focus on React and Cypress testing skills were added by another frontend instructor.",
+      "wrapup": "Overall, I received some great feedback from the students who directly used the calendar. Anonymous Student - 'Specific feedback about the advent calendar: it was so incredibly helpful to have separate discrete things to work on over break. This kept me from getting lost and spending way too much time on any one thing. And also: it was so cute!!! The cuteness wasn’t necessary for the functionality, but it totally helped keep me interested. It was just so cute that I wanted to interact with it all the time. I showed it to several non-coder friends and family members so they could be jealous of what I got to do over the break and be impressed with one of my instructors. I can’t tell you how much I appreciate that you made it, and I feel bad for future mod 1 students that won’t have a break in the middle like we did. Oh also: the cookie comp was hell for a day or two as I kept finding new ways to screw it up but also it was invaluable practice :)'",
       "url": "https://10daysfrontend.netlify.app/",
       "gitHub": "https://github.com/hannahhch/advent-theme"
     },
